bin/tests/lexer/errors/invalid_chars.swg
// swc-option suite-syntax

// ============================================================================
// Lexer Invalid Ok
// ============================================================================

// swc-option lex-only

// (vide)

¤ // swc-expected-error {{lex_err_invalid_char}}
